# Qt-Graphs-Migration-from-Qt-DataVisualization

./: .gitignore  README.md
qt-academy-example-qtdatavis3d/: CMakeLists.txt  Main.qml  Marker.qml  main.cpp
qt-academy-example-qtgraphs/: CMakeLists.txt  Main.qml  Marker.qml  main.cpp
qt-academy-example-qtgraphs/assets/: marker.mesh  selectionpointer.mesh
shared-assets/: license.txt
